--- a/task1/src/App.css
+++ b/task1/src/App.css
@@ -34,3 +34,8 @@ img{
   font-size: larger;
   font-weight: bolder;
 }
+table{
+    font-family: Arial, Helvetica, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+}
