--- a/task1/src/register.css
+++ b/task1/src/register.css
@@ -1,27 +1,47 @@
+*{
+    box-sizing: border-box;
+}
+.body1{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .container{
+    color: rgb(43, 50, 50);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 30px 0px;
-    background-color: rgb(147, 189, 140);
+    padding: 50px 50px;
+    background-color: rgb(191, 185, 194);
     margin-left: auto;
     margin-right: auto;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px;
+    font-weight: 500;
+    /* opacity: 1; */
 }
 input{
-    padding: 8px 10px;
+    padding: 12px 10px;
     margin: 10px;
     border-radius: 10px;
     border: none;
+    width: 100%;
+}
+input:focus{
+    background-color: rgb(250,250,250);
 }
 .regbtn{
-    padding: 10px 15px;
+        padding: 10px 15px;
         background-color: rgb(20, 67, 220);
         border: none;
         border-radius: 3px;
         color: white;
         font-size: larger;
         font-weight: bolder;
+        width: 100%;
 }
 .btnlogin{
         padding: 10px 15px;
@@ -31,4 +51,5 @@ input{
             color: white;
             font-size: larger;
             font-weight: bolder;
+            width: 100%;
 }
