--- a/task1/src/App.css
+++ b/task1/src/App.css
@@ -1,11 +1,11 @@
 .header{
   display: flex;
-  height: 70px;
+  height: 100px;
   justify-content: space-between;
   padding: 10px 40px;
   align-items: center;
   box-shadow: 2px 2px 5px #918b8b;
-  border-radius: 10px;
+  background-color: #e7e3e3;
 }
 .profile{
   display: flex;
@@ -17,16 +17,10 @@ img{
   width: 50px;
   height: 50px;
 }
-.body{
-  display: flex;
-  justify-content: space-between;
-  padding: 50px;
-  background-color: #bbb1b1;
-  margin-top: 10px;
-  border-radius: 20px;
-}
 .btnlogout{
   padding: 10px 15px;
+  float: right;
+  margin: 40px;
   background-color: crimson;
   border: none;
   border-radius: 3px;
